--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,42 @@ body {
   background-image: url(../img/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh; }
+  height: 100vh;
+  margin: 0; }
+
+header {
+  margin: 0; }
+  header .nav-panel {
+    background: linear-gradient(to right, #000, #30c1ee);
+    width: 100%;
+    height: 15vh;
+    z-index: 1; }
+    header .nav-panel .logo {
+      margin-left: 10%;
+      float: left;
+      height: 15vh; }
+      header .nav-panel .logo img {
+        height: 15vh; }
+    header .nav-panel ul {
+      margin: 0 auto;
+      width: 450px;
+      height: 15vh;
+      list-style: none; }
+      header .nav-panel ul li:hover {
+        background: #605ca8;
+        transition-duration: 0s; }
+      header .nav-panel ul li {
+        display: inline-block;
+        margin: 0 15px;
+        padding: 0 10px;
+        height: 15vh;
+        transition-duration: 1s;
+        font-size: 24px; }
+        header .nav-panel ul li a {
+          display: block;
+          margin-top: 6vh;
+          color: #a6a6a6;
+          text-decoration: none;
+          text-transform: uppercase; }
 
 /*# sourceMappingURL=style.css.map */
