--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,3 +60,81 @@ header{
         
     }
 }
+
+content {
+    
+
+    
+    .board{
+        
+        position: fixed;
+       
+        left: 50%;
+        margin-left: -25%;
+        margin-top: 7vh;
+        
+        height: 60vh;
+        width: 50%;
+        background: #252525;
+        box-shadow: 15px 25.981px 43px 0px rgb( 12, 4, 71 );
+        
+        .cells-box:before{
+            
+            display: block;
+            padding-top: 100%;
+        }
+        
+        .cells-box{
+            position: relative;
+            width: 50vh;
+            margin: 10px;
+            margin: 6% auto;
+            
+            
+            .cell:hover{
+             
+                box-shadow: 0 0 30px 10px #ffffbe;
+ 
+            }
+            
+            .cell{
+                margin-left:3%;
+                margin-top: 3%;
+                float: left;
+                width: 30%;
+                height: 15vh;
+                box-sizing: border-box;
+                background: #444;
+                border: 1px solid #04c4f2;
+                background:#605ca8;
+                cursor: pointer;       
+            }
+        }   
+        
+    }
+    
+    .indicator-turn:before{
+        content: "";
+        display: block;
+        padding-top: 100%;
+    }
+    
+    .indicator-turn{
+        position: absolute;
+        top: 18vh;
+        left: 20%;
+        width: 17vh;
+        background: #464646;
+        box-shadow: 21.5px 37.239px 65px 0px rgb( 0, 0, 0 );
+        z-index: 2;
+    }
+
+}
+
+
+
+
+
+
+
+
