--- a/scss/style.scss
+++ b/scss/style.scss
@@ -131,7 +131,28 @@ content {
 
 }
 
+footer{
+    
 
+
+
+    
+   position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 10%;
+    background: #434b58;
+    opacity: 0.89;
+
+    .messages-box{
+        margin: 20px 30px;
+        font-size: 20px;
+        font-family: "Coda";
+        color: rgb( 8, 204, 239 );
+        text-shadow:  0px 0px 10px  #08ccef;
+    }
+    
+}
 
 
 
