--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,9 +63,17 @@ header{
 
 content {
     
-
+    .board:active{
+         transition-duration: 1s;
+        transform: rotateX(0deg);
+        transform: rotateX(-180deg);
+        
+    }
     
     .board{
+        
+    
+        
         
         position: fixed;
        
