--- a/css/style.css
+++ b/css/style.css
@@ -40,62 +40,81 @@ header {
           text-decoration: none;
           text-transform: uppercase; }
 
-content .board:active {
-  transition-duration: 1s;
-  transform: rotateX(0deg);
-  transform: rotateX(-180deg); }
-content .board {
-  position: fixed;
-  left: 50%;
-  margin-left: -25%;
-  margin-top: 7vh;
-  height: 60vh;
-  width: 50%;
-  background: #252525;
-  box-shadow: 15px 25.981px 43px 0px #0c0447; }
-  content .board .cells-box:before {
+content {
+  /* .board:active{
+        transition-duration: 1s;
+       transform: rotateX(0deg);
+       transform: rotateX(-180deg);
+       
+   } */ }
+  content .board {
+    display: none;
+    position: fixed;
+    left: 50%;
+    margin-left: -25%;
+    margin-top: 7vh;
+    height: 60vh;
+    width: 50%;
+    background: #252525;
+    box-shadow: 15px 25.981px 43px 0px #0c0447; }
+    content .board .cells-box:before {
+      display: block;
+      padding-top: 100%; }
+    content .board .cells-box {
+      position: relative;
+      width: 50vh;
+      margin: 10px;
+      margin: 6% auto; }
+      content .board .cells-box .cell_X:hover {
+        background-image: url(../img/X-board.png); }
+      content .board .cells-box .cell_O:hover {
+        background-image: url(../img/O-board.png); }
+      content .board .cells-box .cell:hover {
+        transition-duration: 0s;
+        box-shadow: 0 0 30px 10px #ffffbe; }
+      content .board .cells-box .cell {
+        margin-left: 3%;
+        margin-top: 3%;
+        float: left;
+        width: 30%;
+        height: 15vh;
+        box-sizing: border-box;
+        background: #444;
+        border: 1px solid #04c4f2;
+        background: #605ca8;
+        cursor: pointer;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-position: center;
+        transition-duration: 1s; }
+      content .board .cells-box .set_x {
+        background-image: url(../img/X-board.png); }
+      content .board .cells-box .set_x:hover {
+        background-image: url(../img/X-board.png); }
+      content .board .cells-box .set_o {
+        background-image: url(../img/O-board.png); }
+      content .board .cells-box .set_o:hover {
+        background-image: url(../img/O-board.png); }
+  content .indicator-turn:before {
+    content: "";
     display: block;
     padding-top: 100%; }
-  content .board .cells-box {
-    position: relative;
-    width: 50vh;
-    margin: 10px;
-    margin: 6% auto; }
-    content .board .cells-box .cell:hover {
-      box-shadow: 0 0 30px 10px #ffffbe;
-      background-image: url(../img/X-board.png);
-      background-repeat: no-repeat;
-      background-size: 100%;
-      background-position: center;
-      transition-duration: 0s; }
-    content .board .cells-box .cell {
-      margin-left: 3%;
-      margin-top: 3%;
-      float: left;
-      width: 30%;
-      height: 15vh;
-      box-sizing: border-box;
-      background: #444;
-      border: 1px solid #04c4f2;
-      background: #605ca8;
-      cursor: pointer;
-      transition-duration: 1s; }
-content .indicator-turn:before {
-  content: "";
-  display: block;
-  padding-top: 100%; }
-content .indicator-turn {
-  position: absolute;
-  top: 18vh;
-  left: 20%;
-  width: 17vh;
-  background: #464646;
-  box-shadow: 21.5px 37.239px 65px 0px black;
-  z-index: 2;
-  background-image: url(../img/X-ind.png);
-  background-repeat: no-repeat;
-  background-size: 50%;
-  background-position: center; }
+  content .indicator-turn {
+    display: none;
+    position: absolute;
+    top: 18vh;
+    left: 20%;
+    width: 17vh;
+    background: #464646;
+    box-shadow: 21.5px 37.239px 65px 0px black;
+    z-index: 2;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: center; }
+  content .indicator_X {
+    background-image: url(../img/X-ind.png); }
+  content .indicator_O {
+    background-image: url(../img/O-ind.png); }
 
 footer {
   position: fixed;
